Bugs fixed in TC_0102.